20_rot_matrix/grade.txt
Grading at Tue Mar 19 17:34:29 UTC 2019
Attempting to compile rotate.c
rotate.c: In function ‘transpose’:
rotate.c:6:8: error: unused variable ‘temp2’ [-Werror=unused-variable]
   char temp2;
        ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
